# CNCSorter

./: .coverage  .gitignore  DESKTOP_CONSOLE.md  DISABLED_FEATURES.md  GIMBAL_HARDWARE_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INSTALL_GUIDE.md  MAC_SETUP.md  MANIFEST.in  MULTI_CAMERA_GUIDE.md  OVERVIEW.md  PROJECT_STATUS.md  README.md  RPI_TROUBLESHOOTING.md  TOUCHSCREEN_INTERFACE.md  UPGRADE.md  agents.md  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  run.bat  run.sh  run_desktop.sh  run_gui.sh  run_rpi.sh  run_touchscreen.sh  setup.py
sec/: main.py
src/: __init__.py  configure_machine.py  desktop_console.py  desktop_interface.py  gimbal_test.py  gui_touchscreen.py  gui_touchscreen.py.backup  main.py  run_interfaces.py  test_menu.py  touchscreen_interface.py
src/application/: bed_mapping.py
src/cncsorter/: __init__.py  config.py  py.typed
src/cncsorter/application/: bed_mapping.py  events.py  pick_planning.py  scanning.py  subscribers.py
src/cncsorter/domain/: __init__.py  entities.py  interfaces.py  system_config.py
src/cncsorter/infrastructure/: cnc_controller.py  config_validation.py  gimbal_controller.py  logging_service.py  mock_cnc_controller.py  motion_validator.py  object_classifier.py  persistence.py  vision.py  vision_enhanced.py  vision_multi_camera.py
src/cncsorter/presentation/: live_display.py
src/domain/: entities.py
src/infrastructure/: cnc_controller.py  gimbal_controller.py  vision.py  vision_multi_camera.py
src/presentation/: live_display.py
tests/: README.md  __init__.py
tests/application/: test_events.py  test_pick_planning_commands.py  test_pick_planning_tool.py  test_scanning.py
tests/domain/: test_entities.py
tests/infrastructure/: test_mock_cnc.py  test_persistence_failed_status.py  test_persistence_status.py
tests/modules/: __init__.py  main.py  main_original.py
tests/presentation/: test_desktop_interface.py
