[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cncsorter"
version = "1.0.0-alpha"
description = "Production-ready CNC object detection and sorting system with DDD architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "keithjasper83"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python==4.10.0.84",
    "numpy==1.26.4",
    "pyserial==3.5",
    "requests==2.32.3",
    "sqlalchemy>=2.0.0",
    "flask>=3.0.0",
    "pydantic>=2.0.0",
    "nicegui>=1.4.0",
    "fastapi>=0.104.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "pydocstyle>=6.3.0",
]

[project.urls]
Homepage = "https://github.com/keithjasper83/CNCSorter"
Repository = "https://github.com/keithjasper83/CNCSorter"
Issues = "https://github.com/keithjasper83/CNCSorter/issues"

[project.scripts]
cncsorter = "src.main:main"

[tool.setuptools]
packages = ["cncsorter"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
cncsorter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cncsorter --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]
